Bug 1102278 - IonMonkey MIPS: Fix Globalreg clobber in GenerateFFIIonExit. r=luke